# ItchWine

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
itchwine-api/: Cargo.toml
itchwine-api/src/: api.rs  lib.rs  oauth.rs
itchwine-api/src/structs/: me.rs
itchwine-gui/: Cargo.toml
itchwine-gui/src/: main.rs
itchwine-gui/src/resources/ui/: main.ui
itchwine-tui/: Cargo.toml  token.txt
itchwine-tui/src/: main.rs
