[package]
name = "itchwine-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.8", features = ["json", "gzip"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
webbrowser = "1.0.2"
